# bellman-substrate

./: Cargo.toml  README.md
bellman/: Cargo.toml
bellman-verifier/: Cargo.toml
bellman-verifier/src/: dummy_engine.rs  lib.rs  verifier.rs
bellman/src/: domain.rs  lib.rs  multicore.rs  multiexp.rs  utils.rs
bellman/src/groth16/: generator.rs  mod.rs  prover.rs  utils.rs
bellman/src/groth16/tests/: dummy_engine.rs  mod.rs
jubjub/: Cargo.toml
jubjub/src/: lib.rs  redjubjub.rs
jubjub/src/jubjub/: edwards.rs  fs.rs  mod.rs
librustzcash/: Cargo.toml
pairing/: Cargo.toml
pairing/src/: lib.rs  utils.rs  wnaf.rs
pairing/src/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
pairing/src/tests/: curve.rs  repr.rs
sapling-crypto/: Cargo.toml
sapling-crypto/src/: lib.rs  pedersen_hash.rs  redjubjub.rs
sapling-crypto/src/circuit/: blake2s.rs  boolean.rs  ecc.rs  multieq.rs  multipack.rs  num.rs  pedersen_hash.rs  sha256.rs  uint32.rs
sapling-crypto/src/circuit/sapling/: mod.rs
sapling-crypto/src/circuit/sprout/: commitment.rs  mod.rs  prfs.rs
sapling-crypto/src/jubjub/: edwards.rs  fs.rs  mod.rs
sapling-crypto/src/primitives/: mod.rs
