[package]
name = "bellman-verifier"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.4", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
parity-codec = { version = "3.0", default-features = false}
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
pairing = { path = "../pairing" }

[features]
default = ["std"]
std = [
    "rand/std",                
    "parity-codec/std",    
    "parity-codec-derive/std",
    "serde/std",
    "serde_derive",
    "rstd/std",
    "sr-io/std"
]
