[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "zk-SNARK library"
documentation = "https://github.com/ebfull/bellman"
homepage = "https://github.com/ebfull/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/ebfull/bellman"
version = "0.1.0"

[dependencies]
rand = { version = "0.4", default-features = false }
bit-vec = { git = "https://github.com/osuketh/bit-vec", default-features = false }
futures = { version = "0.1", default-features = false  }
byteorder = { version = "1", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
pairing = { path = "../pairing" }
futures-cpupool = { version =  "0.1", optional = true }
num_cpus = { version =  "1", optional = true }
crossbeam = { version =  "0.3", optional = true }

[features]
default = ["std"]
std = [
    "rand/std",        
    "bit-vec/std",
    "futures/use_std",
    "byteorder/std",
    "parity-codec/std",    
    "parity-codec-derive/std",
    "serde/std",
    "serde_derive",
    "sr-std/std",
    "sr-io/std"
]
multithread = [
    "futures-cpupool",
    "num_cpus",
    "crossbeam",
]
