[package]
name = "pairing"

# Remember to change version string in README.md.
version = "0.14.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/ebfull/pairing"
repository = "https://github.com/ebfull/pairing"

[dependencies]
rand = { version = "0.4", default-features = false }
byteorder = { version = "1", default-features = false }
clippy = { version = "0.0.200", optional = true }
parity-codec-derive = { version = "3.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }

[features]
unstable-features = ["expose-arith"]
expose-arith = []
u128-support = []
default = ["std"]
std = [
    "rand/std",
    "byteorder/std",
    "parity-codec/std",
    "parity-codec-derive/std",    
    "serde/std",
    "serde_derive",
    "sr-std/std",
    "sr-io/std",
]
