[package]
authors = [
    "Sean Bowe <sean@z.cash>",
    "Osuke Sudo <dish230@gmail.com>",
]
description = "Cryptographic library for Zcash Sapling"
license = "MIT/Apache-2.0"
name = "sapling-crypto"
version = "0.0.1"

[dependencies.pairing]
path = "../pairing"
features = ["expose-arith"]

[dependencies]
bellman = { path = "../bellman" }
rand = { version = "0.4", default-features = false }
digest = { version = "0.7", default-features = false }
byteorder = { version = "1", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
default-features = false

[dev-dependencies]
hex-literal = "0.1"
rust-crypto = "0.2"

[features]
default = ["std"]
u128-support = ["pairing/u128-support"]
std = [
    "pairing/u128-support",
    "rand/std", 
    "digest/std",
    "byteorder/std",
    "parity-codec/std",    
    "parity-codec-derive/std",
    "sr-std/std",
    "sr-io/std",
    "blake2-rfc/std",
]